src/objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>In_Service_A__c</fullName>
        <label>In Service A</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>In_Service_F__c</fullName>
        <label>In Service F</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Start_A__c</fullName>
        <label>Project Start A</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Start_F__c</fullName>
        <label>Project Start F</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <label>Site</label>
        <referenceTo>Site__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>